--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -129,4 +129,4 @@ jobs:
       if: github.event_name == 'release' && github.event.action == 'published'
       working-directory: ${{ github.workspace }}
       shell: pwsh
-      run: dotnet nuget push "./artifacts/pkg/rel/*.nupkg" --api-key ${{steps.nuget_login.outputs.NUGET_API_KEY}} --source https://apiint.nugettest.org/v3/index.json
+      run: dotnet nuget push ".\artifacts\pkg\rel\*.nupkg" --api-key ${{steps.nuget_login.outputs.NUGET_API_KEY}} --source https://apiint.nugettest.org/v3/index.json
