--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -124,11 +124,9 @@ jobs:
       id: nuget_login
       with:
         user: ${{ secrets.NUGET_USER }}
-        token-service-url: https://int.nugettest.org/api/v2/token
-        audience: https://int.nugettest.org
       
     - name: Upload NuGet package
       if: github.event_name == 'release' && github.event.action == 'published'
       working-directory: ${{ github.workspace }}
       shell: pwsh
-      run: dotnet nuget push ".\artifacts\pkg\rel\*.nupkg" --api-key ${{steps.nuget_login.outputs.NUGET_API_KEY}} --source https://apiint.nugettest.org/v3/index.json
+      run: dotnet nuget push ".\artifacts\pkg\rel\*.nupkg" --api-key ${{steps.nuget_login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
